Remove old sass-lint disable rules

--- a/src/govuk/settings/_colours-palette.scss
+++ b/src/govuk/settings/_colours-palette.scss
@@ -22,8 +22,8 @@ $govuk-use-legacy-palette: if(
     $govuk-compatibility-govuktemplate or
     $govuk-compatibility-govukelements
   ),
-  true, // sass-lint:disable-line indentation
-  false // sass-lint:disable-line indentation
+  true,
+  false
 ) !default;
 
 /// Legacy colour palette
