--- a/src/govuk/helpers/_font-faces.scss
+++ b/src/govuk/helpers/_font-faces.scss
@@ -1,10 +1,7 @@
 ////
 /// @group helpers
 ////
-
-// Disables linting for this file only
-// sass-lint:disable no-css-comments, no-duplicate-properties, property-sort-order, indentation
-// stylelint-disable scss/comment-no-loud, order/properties-order
+// stylelint-disable scss/comment-no-loud
 
 @import "../tools/exports";
 
@@ -20,24 +17,23 @@
     @include govuk-exports("govuk/helpers/font-faces") {
       @at-root {
         /*! Copyright (c) 2011 by Margaret Calvert & Henrik Kubel. All rights reserved. The font has been customised for exclusive use on gov.uk. This cut is not commercially available. */
-
         @font-face {
           font-family: "GDS Transport";
+          font-style: normal;
+          font-weight: normal;
           src:
             govuk-font-url("light-94a07e06a1-v2.woff2") format("woff2"),
             govuk-font-url("light-f591b13f7d-v2.woff") format("woff");
-          font-weight: normal;
-          font-style: normal;
           font-display: fallback;
         }
 
         @font-face {
           font-family: "GDS Transport";
+          font-style: normal;
+          font-weight: bold;
           src:
             govuk-font-url("bold-b542beb274-v2.woff2") format("woff2"),
             govuk-font-url("bold-affa96571d-v2.woff") format("woff");
-          font-weight: bold;
-          font-style: normal;
           font-display: fallback;
         }
       }
